--- a/Single/Short-Change-Hero.html
+++ b/Single/Short-Change-Hero.html
@@ -1,1 +1,5 @@
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7qxDU2QyH24KHW0OSGotVw?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/track/7qxDU2QyH24KHW0OSGotVw?utm_source=generator&theme=1" width="100%"
+        height="352" frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+</iframe>
